--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@popperjs/core": "^2.11.6",
+    "jquery": "^3.6.1",
     "localtunnel": "^2.0.2",
+    "ngx-markdown": "^14.0.1",
+    "popper.js": "^1.16.1",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
