--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "font-awesome": "^4.7.0",
     "localtunnel": "^2.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
