--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.scss"
             ],
-            "scripts": []n
+            "scripts": []
           },
           "configurations": {
             "production": {
