--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rxjs": "~7.5.0",
     "swiper": "^8.4.4",
     "tslib": "^2.3.0",
+    "yt-player-angular": "^5.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
